--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-animate": "^1.3.0",
     "angular-aria": "^1.3.0",
     "angular-route": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "ngstorage": "git@github.com:gsklee/ngStorage.git#~0.3.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
