--- a/bower.json
+++ b/bower.json
@@ -5,10 +5,12 @@
     "angular": "^1.3.0",
     "json3": "^3.3.0",
     "es5-shim": "^4.0.0",
+    "hammerjs": "^2.0.0",
     "angular-animate": "^1.3.0",
     "angular-aria": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-touch": "^1.3.0",
+    "angular-material": "^0.5.0",
     "ngstorage": "git@github.com:gsklee/ngStorage.git#~0.3.0"
   },
   "devDependencies": {
