--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "angular-route": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angular-material": "^0.5.0",
-    "ngstorage": "git@github.com:gsklee/ngStorage.git#~0.3.0"
+    "ngstorage": "https://github.com/gsklee/ngStorage.git"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
