--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "build": "grunt build",
+    "deploy": "./deploy.sh"
   }
 }
