--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,5 @@
     "angular-scenario": "~1.3.0"
   },
   "appPath": "app",
-  "resolutions": {
-    "angular": "1.3.2"
-  }
+  "main": ["scripts/scripts.js", "styles/main.cs"]
 }
