--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-newer": "^0.7.0",
     "grunt-ng-annotate": "^0.4.0",
     "grunt-svgmin": "^0.4.0",
+    "grunt-template": "^0.2.3",
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "^1.7.0",
     "jshint-stylish": "^0.2.0",
